--- a/docs/guides/access-groups.mdx
+++ b/docs/guides/access-groups.mdx
@@ -4,53 +4,58 @@ description: How to create and manage access groups for your organization's acco
 platform: cloud
 ---
 
-# Set up access policies and access groups
+# Create access policies and access groups
 <Admonition type="note">
 This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/admin/)
 </Admonition>
 
-When you create an instance in IBM Quantum Platform, an access group is automatically generated (unless you opt out) for access to that instance. If you want to customize an access group for an instance, or create other access groups, use the IBM&reg; Cloud console for [Access groups.](https://cloud.ibm.com/iam/groups)
+When you create an instance in IBM Quantum Platform, an access group is automatically generated for collaborators to use that instance. If you want to customize that access group or create other access groups, use the IBM&reg; Cloud console for [Access groups](https://cloud.ibm.com/iam/groups).
 
-An _access group_ contains _policies_, which define the actions that access group members can take on specific resources.  In this guide, the resource is always  an IBM Quantum _service instance_.
+An _access group_ contains _policies_, which define the actions that access group members can take on specific resources, such as services.  In this guide, the resource is generally an IBM Quantum _service instance_.
+
+You can create additional access groups by using the IBM Cloud [console,](https://cloud.ibm.com/docs/account?topic=account-groups&interface=ui) [CLI,](https://cloud.ibm.com/docs/account?topic=account-groups&interface=cli) [API,](https://cloud.ibm.com/docs/account?topic=account-groups&interface=api) or [Terraform.](https://cloud.ibm.com/docs/account?topic=account-groups&interface=terraform)
+
+## Create an IBM Quantum Administrators access group
+After setting up an account for your organization, it's recommended that you create an  IBM Quantum Administrators access group. This access group lets other users create and manage instances, and manage user access for the Qiskit Runtime service.
+
+When you create this access group, include the following policies:
+
+- Qiskit Runtime service - Grant access to manage all IBM Quantum instances in the account and view account usage analytics.
+  - **Manager** service access role
+  - **Administrator** platform management access role
+- All account management services - Grant access to list all the resource groups in the account.
+  - **Viewer** platform management access role
+- All IAM Account Management services - Grant access to invite users, manage access groups, and create access policies.
+  - **Administrator** platform management access role
+
 
 <Admonition type="note">
-After an access group is created, you can invite users to the group by using the IBM Quantum Platform [Access management](https://quantum.cloud.ibm.com/access-groups) page in the left-hand menu.
+  Users with the `viewer` platform management role on "all account management services" can also view services such as billing. If you want to prevent this extra view access, use the IBM Cloud CLI to give them access to just Resource groups:
+  ```cli
+  ibmcloud iam access-group-policy-create <group name> --roles Viewer --resource-type resource-group
+  ```
 </Admonition>
 
-<span id="json"></span>
-## Create a Qiskit Runtime Administrators access group (JSON)
+Follow these examples to create an IBM Quantum Administrators access group by using the IBM Cloud CLI or console.
 
-After setting up an account for your organization, it's recommended that you go to the IBM Cloud console for [Access groups](https://cloud.ibm.com/iam/groups) and create a Qiskit Runtime Administrators access group. This access group gives access to other users to create and manage instances, and manage user access for the Qiskit Runtime service.
+<span id="cli"></span>
+### Use the IBM Cloud CLI
 
-When you create this access group, include the following policies.  You can copy and paste the code into the JSON entry feature on the IAM console. Alternatively, you can make all of the selections on the user interface, as described in the [next section.](#ui)
+To create an _access group_ by using the CLI, use the [`ibmcloud iam access-group-create`](https://cloud.ibm.com/docs/cli?topic=cli-ibmcloud_commands_iam#ibmcloud_iam_access_group_policy_create) command.
 
-- All IAM Account Management services (Administrator), required for inviting users, managing access groups and creating access policies
-
-```json
-{
-    "type": "access",
-    "roles": [
-        {
-            "role_id": "crn:v1:bluemix:public:iam::::role:Administrator"
-        }
-    ],
-    "resources": [
-        {
-            "attributes": [
-                {
-                    "name": "accountId",
-                    "value": "[ACCOUNT_ID]"
-                },
-                {
-                    "name": "service_group_id",
-                    "value": "IAM"
-                }
-            ]
-        }
-    ]
-}
+```cli
+ibmcloud iam access-group-create GROUP_NAME [-d, --description DESCRIPTION]
 ```
-- All Account Management services (viewer), needed for listing all the resource groups in the account
+
+To create an access group _policy_ by using the CLI, use the [`ibmcloud iam access-group-policy-create`](https://cloud.ibm.com/docs/cli?topic=cli-ibmcloud_commands_iam#ibmcloud_iam_access_group_policy_create) command.
+
+```cli
+ibmcloud iam access-group-policy-create GROUP_NAME {-f, --file @JSON_FILE | --roles ROLE_NAME1,ROLE_NAME2... [--service-name SERVICE_NAME] [--service-instance SERVICE_INSTANCE] [--region REGION] [--resource-type RESOURCE_TYPE] [--resource RESOURCE] [--resource-group-name RESOURCE_GROUP_NAME] [--resource-group-id RESOURCE_GROUP_ID]}
+```
+
+You can use the following JSON code to create policies for an Administrators access group:
+
+- All Account Management services (viewer)
 ```json
 {
     "type": "access",
@@ -76,7 +81,7 @@ When you create this access group, include the following policies.  You can copy
 }
 ```
 
-- Qiskit Runtime Service (Manager, Administrator), required to manage all IBM Quantum instances in the account and view account usage analytics
+- Qiskit Runtime Service (Manager, Administrator)
 ```json
 {
     "type": "access",
@@ -105,38 +110,75 @@ When you create this access group, include the following policies.  You can copy
 }
 ```
 
-<span id="ui"></span>
-## Create an access group and invite users to an instance (user interface)
+- All IAM Account Management services (administrator)
+```json
+{
+    "type": "access",
+    "roles": [
+        {
+            "role_id": "crn:v1:bluemix:public:iam::::role:Administrator"
+        }
+    ],
+    "resources": [
+        {
+            "attributes": [
+                {
+                    "name": "accountId",
+                    "value": "[ACCOUNT_ID]"
+                },
+                {
+                    "name": "service_group_id",
+                    "value": "IAM"
+                }
+            ]
+        }
+    ]
+}
+```
 
-As an account owner or administrator, you add the people in your organization to the IBM Cloud account and then assign them access permissions to use an instance.
+
+<span id="ui"></span>
+### Use the IBM Cloud IAM console
+
+As an account owner or administrator, follow these steps to create an IBM Quantum Administrator access group.
 
 1. Go to Manage > [Access (IAM)](https://cloud.ibm.com/iam/overview) in the IBM Cloud console.
 1. On the left panel in the **Manage access** section, click **Access groups**, then click **Create**.
-1. In the **Create access group** window that opens, add a name and description that represent the group of users that you will invite.  For example, the company name. Click **Create**.
-1. In the access group just created, click the **Access** tab, then click **Assign access** at the top right.
-1. In the **Create policy** page that opens, define these elements. Alternatively, you can copy and paste code into the JSON entry feature, as described in the [previous section.](#json)
-   - **Service** - In the search field look for Qiskit Runtime and select it. Click **Next**.
-   - **Resources** - Select **Specific resources**, and in the rest of the dropdowns, choose the following:
-      - For **Attribute type**, select **Service Instance**.
-      - For **Operator**, select **string equals**.
-      - For **Value**, select the instance you want to grant access to. Click **Next**.
+1. In the **Create access group** window that opens, add a name and description that represent the group of users that you will invite.  For example, IBM Quantum Administrators. Click **Create**.
+
+Next, create policies for the Qiskit Runtime service,  for All IAM Account Management services, and for All Account Management services.
+1. In the access group just created, click the **Access** tab, then click **Assign access**.
+1. In the **Create policy** page that opens, define these elements:
+   - **Service** - Search for Qiskit Runtime and select it. Click **Next**.
+   - **Resources** - Select **All resources**. Click **Next**.
+      Note: If you were creating a policy that you want to apply only to a certain instance, you would instead choose **Specific resources**, **Service instance**, **string equals**, then select the instance.
    - **Roles and actions** - Select the following values:
-      - For **Service access**, select one of the following:
-         - **Reader**, if the user only needs to view (but not send) jobs.
-         - **Writer**, if the user needs to send, update, and delete jobs.
-         - **Manager**, if in addition to Writer and Reader actions, the user needs to update the instance `max cost limit`.
-         - Your own custom role (optional), defined on the [Roles](https://cloud.ibm.com/iam/roles) page.
-      - For **Platform access**, select **Viewer**.
-   - **Conditions (optional)**. Click **Review**.
+      - For **Service access**, select  **Manager**.
+      - For **Platform access**, select **Administrator**.
 
-   At the bottom, click **Add**. You should see the policy on the right-hand panel. Click **Assign** at the bottom of the right-hand panel. You have successfully created an access group for your instance.
-1. On the left panel in the **Manage identities** section, click **Users**. Then, at the top right click **Invite users**.
-   - Enter the email addresses of your users separated by commas, spaces, or line breaks.
-   - Select **Access groups** as the way to assign access.
-   - In the access groups table, select the one you just created and click **Add**. You will see the Access summary on the right-hand panel. Click **Invite** at the bottom of the Access summary panel.
+   At the bottom, click **Add**. You should see the policy on the right-hand panel. Click **Assign** at the bottom of that panel.
 
-Users will receive an email with an invitation to use this account with the defined access to the instance. After they accept the invitation, they will see a new account in their account switcher at the top of the IBM Quantum Platform page. After selecting the new account, they will see the shared instance.
+You have successfully created an access group with one policy.  Next, create a second policy for the same instance.
 
+1. In the same access group, click the **Access** tab, then click **Assign access**.
+1. In the **Create policy** page that opens, define these elements:
+   - **Service** - Select **All IAM Account Management services**. Click **Next**.
+   - **Roles and actions** - For Platform access, select **Administrator**, Click **Next**.
+   At the bottom, click **Add**, then click **Assign**.
+
+Create a third policy for the same instance.
+
+1. In the same access group, click the **Access** tab, then click **Assign access**.
+1. In the **Create policy** page that opens, define these elements:
+   - **Service** - Select **All Account Management services**. Click **Next**.
+   - **Roles and actions** - For Platform access, select **Viewer**, Click **Next**.
+   At the bottom, click **Add**, then click **Assign**.
+
+Finally, add users to the access group.  You can do this from the access group's **Users** page, or by using the IBM Quantum Platform [Access management](https://quantum.cloud.ibm.com/access-groups) page.
+
+<Admonition type="note">
+You can only invite users who are already members of the account.  If you don't see a user on the Add users page, follow the steps in [Invite and manage users](/guides/invite-and-manage-users#invite) to add them to the account first.  After they accept the invitation, you can add them to the access group.
+</Admonition>
 
 
 ## Next steps
@@ -144,6 +186,6 @@ Users will receive an email with an invitation to use this account with the defi
 <Admonition type="tip" title="Recommendations">
    - Understand the [IBM Cloud account structure,](/guides/cloud-account-structure) including access policies, groups, and roles.
    - Read about [how IBM Cloud IAM works.](https://cloud.ibm.com/docs/account?topic=account-iamoverview)
-   - See how to [set up access groups.](https://cloud.ibm.com/docs/account?topic=account-groups&interface=ui)
-   - Learn more about [creating custom roles.](https://cloud.ibm.com/docs/account?topic=account-custom-roles&interface=ui)
+   - Read more about how to [set up access groups.](https://cloud.ibm.com/docs/account?topic=account-groups&interface=ui)
+   - Learn about [creating custom roles.](/guides/custom-roles)
 </Admonition>
