--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -48,7 +48,7 @@ By default, users who sign up for an IBM Quantum account are assigned to the Ope
 Those using the Open Plan instance have up to 10 minutes total of quantum time per month, which resets at 00:00:00 UTC on the first of each calendar month. Open Plan users can track their usage on the [Platform dashboard,](https://quantum.ibm.com/) [Workloads,](https://quantum.ibm.com/workloads) and [Account](https://quantum.ibm.com/account) pages.
 </LegacyContent>
 <CloudContent>
-After you have an IBM Cloud&reg; account, you can create an instance in the Open Plan and access up to 10 minutes total of quantum time per 28-day rolling window. Open Plan users can track their usage on the [Platform dashboard](https://quantum.cloud.ibm.com/) and the [Workloads](https://quantum.cloud.ibm.com/workloads) pages.
+After you have an IBM Cloud&reg; account, you can create an instance in the Open Plan and access up to 10 minutes total of quantum time per 28-day rolling window.
 </CloudContent>
 ## View your instances
 
@@ -64,7 +64,7 @@ You can use [the `instances()` method](../api/qiskit-ibm-runtime/qiskit-runtime-
 The IBM Quantum Platform dashboard, Compute resources, and Workloads pages display information such as usage metrics, workloads, and quantum computers based on your instance. If you have access to multiple instances, use the dropdown in the menu bar to switch between instances.
 </LegacyContent>
 <CloudContent>
-The IBM Quantum Platform [dashboard](https://quantum.cloud.ibm.com/), [Compute resources](https://quantum.cloud.ibm.com/computers), and [Workloads](https://quantum.cloud.ibm.com/workloads) pages display information such as usage metrics, workloads, and quantum computers based on your account. If you have access to multiple accounts, use the dropdown in the menu bar to switch between accounts.
+The IBM Quantum Platform [dashboard](https://quantum.cloud.ibm.com/), [Compute resources](https://quantum.cloud.ibm.com/computers), and [Workloads](https://quantum.cloud.ibm.com/workloads) pages display information such as workloads and quantum computers based on your account. If you have access to multiple accounts, use the dropdown in the menu bar to switch between accounts.
 
 By default, the Workloads and Compute resources pages display all data across all instances you can access within an account. You can filter the data table by a specific instance using the filter icon in the upper right.
 </CloudContent>
@@ -86,6 +86,7 @@ If you switch to a different instance, it is remembered the next time you log on
 When you execute a task using an IBM Quantum service (for example, sending circuits to a quantum computer), a **job** instance is returned to you. Regardless of which service is being used, a job can track the progress of the submission through IBM Quantum, and retrieve the final computation results. Because services are coupled to instances, the jobs created from these services are also tied to the specific instance being used. Therefore, **if a user is removed from an instance, their jobs and the associated results are no longer accessible**.
 </LegacyContent>
 
+
 ## How usage affects job priority within an instance
 <LegacyContent>
 *This section applies to Premium Plan users only, since their access includes multiple instances.*
@@ -103,9 +104,7 @@ If an instance has been marked as "limited" by your administrator (you will see 
 An alert displays on an instance's usage when it has exceeded its allocation.
 </LegacyContent>
 <CloudContent>
-If an instance has been marked as "limited" by your administrator (you will see a "**Remaining**" column in the usage area) and the instance exceeds its allocation (defined by your administrator) within the 28-day rolling window, active and pending workloads might be canceled. If an instance is not limited and the instance exceeds its allocation, jobs run with that instance are likely to run at a lower priority and experience longer queue times.
-
-An alert displays on an instance's usage when it has exceeded its allocation.
+If an instance has been marked as "limited" by your administrator and the instance exceeds its allocation (defined by your administrator) within the 28-day rolling window, active and pending workloads might be canceled. If an instance is not limited and the instance exceeds its allocation, jobs run with that instance are likely to run at a lower priority and experience longer queue times.
 </CloudContent>
 <span id="connect-instance"></span>
 ## Specify an instance in your code
@@ -162,6 +161,7 @@ If you do not specify an instance, the code will select one in the following ord
 3. In all other cases, the code selects the first instance other than the Open Plan instance that has access to the quantum computer.
 </Admonition>
 
+<span id="add-instance"></span>
 ## Add an instance
 
 1. To add an instance to your account, first ensure you have the correct account and region selected in the account switcher in the top header.
@@ -177,36 +177,38 @@ If you do not specify an instance, the code will select one in the following ord
    To avoid exposure of the user's workflow data to a global Distributed Denial of Service protection layer, you can use [Virtual Private Endpoints](https://cloud.ibm.com/docs/overview?topic=overview-endpoints-support). `qiskit-ibm-runtime` supports this through the [private_endpoint parameter](/api/qiskit-ibm-runtime/qiskit-runtime-service).
    </Admonition>
 
-1. From the dashboard Instances pane, click **View all**, or go to the [Instances](https://quantum.cloud.ibm.com/instances) page from the left-hand menu.
+1. From the dashboard Instances pane, click **View all**, or go to the [Instances](https://quantum.cloud.ibm.com/instances) page from the main menu.
 1. From the Instances page, click *Create instance&nbsp;+*. Enter a name and optionally add tags. If you have access to more than one resource group in IBM Cloud&reg;, you can choose to change the resource group this instance belongs to. See [Managing resource groups](https://cloud.ibm.com/docs/account?topic=account-rgs&interface=ui) and [Giving access to resources in resource groups](https://cloud.ibm.com/docs/account?topic=account-rgs_manage_access) for more information.
 1. Select the plan this instance is associated with (for example, Premium Plan), then enter the number of minutes to allocate to this instance. The unallocated time available to use appears under the allocation entry box.
 1. Click **Next**. A list of the QPUs the instance can access is shown. If you want the instance to have access to all the QPUs listed (and all QPUs added to this plan in the future), click **Next**. To customize which QPUs can be accessed with this instance, click the "Customize allocated compute resources" toggle. Select specific QPUs that this instance can access, then click **Next**.
    <Admonition type="note">
       If you customize the allocated compute resources, the available QPUs will never be automatically updated, regardless of any changes made to the parent plan.  However, you can manually add or remove QPUs later. If you do not customize them, you will always have access to any QPU the account has access on the plan. So if in the future there is a new system added to the plan, the instance automatically has access to it.
     </Admonition>
-1. By default, an access group is created for this instance. Users added to this access group can use the time allocated to this instance. If you do not want an access group to be automatically created for this instance, click the "Create access group automatically" toggle. You can [create access groups](/guides/access-groups) later by using the IBM Cloud console.
 1. Click **Create instance**. You can now view the instance on the Instances page (if you have set up multiple plans on your account, each plan type has its own tab on the Instances table).
+
+A "collaborators" access group is automatically created for this instance. Users added to this access group can use the time allocated to this instance. You can [modify or create additional access groups](/guides/access-groups) by using the IBM Cloud console.
+
 
 ## Edit an instance and its allocation
 
-Find the instance on the [Instances](https://quantum.cloud.ibm.com/instances) page. To edit the instance, click the three-dots menu at the end the instance's row, and select Edit details. In the modal that opens, you can edit the name of the instance, the number of minutes allocated to the instance, and which compute resources the instance can access.
+Find the instance on the [Instances](https://quantum.cloud.ibm.com/instances) page. To edit the instance, click the overflow menu at the end the instance's row, and select Edit details. In the modal that opens, you can edit the name of the instance, the number of minutes allocated to the instance, and which compute resources the instance can access.
 
 <LegacyContent>
 ## Leave an instance
 
-To leave an instance, visit the instance list on your [Account page.](https://quantum.ibm.com/account) Select the instance you wish to leave, then select the overflow menu and choose *Leave instance*.
+To leave an instance, visit the instance list on your [Account page.](https://quantum.ibm.com/account) Select the instance you wish to leave, then select the overflow menu and choose **Leave instance**.
 
 ![Screenshot of the Account page.](/images/guides/leaving1.avif "Leave instance")
 </LegacyContent>
 
 ## Delete an instance
 
-Find the instance on the [Instances](https://quantum.cloud.ibm.com/instances) page. To delete the instance, click the three-dots menu at the end the instance's row, and select Delete.
+Find the instance on the [Instances](https://quantum.cloud.ibm.com/instances) page. To delete the instance, click the overflow menu at the end the instance's row, and select **Delete**.
 
 
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-    - Try the [Grover's algorithm](https://learning.quantum.ibm.com/tutorial/grovers-algorithm) tutorial.
-    - Review the [QiskitRuntimeService instances method](/api/qiskit-ibm-runtime/qiskit-runtime-service#instances) reference.
+    - [Work with access groups](/guides/access-groups)
+    - [Manage users.](/guides/invite-and-manage-users)
 </Admonition>
