--- a/docs/guides/invite-and-manage-users.mdx
+++ b/docs/guides/invite-and-manage-users.mdx
@@ -10,31 +10,39 @@ This documentation is relevant to the new IBM Quantum&reg; Platform. If you need
 </Admonition>
 
 <Admonition type="tip" title="Before you begin">
-Create your account's instances before you invite users. For every instance you create through IBM Quantum Platform, an associated [access group](/guides/access-groups) is automatically generated (unless you decline the automatically generated access group when you create the instance). When you invite users to an instance using IBM Quantum Platform, you can assign them to a specific instance's access group as part of the invitation process.
+Create your account's instances before you invite users. For every instance you create through IBM Quantum Platform, an associated [access group](/guides/access-groups) is automatically generated. When you invite users to an instance, you can assign them to a specific instance's access group as part of the invitation process.
 </Admonition>
 
+<span id="invite"></span>
 ## Invite users to your organization's account
 
 <Admonition note="tip" title="Users with IBM Cloud accounts">
 If a user has a previously existing IBM Cloud account, follow the instructions in the [Manage IBM Cloud users](/guides/manage-cloud-users) section.
 </Admonition>
 
-1. First, ensure you have the correct account and region selected in the account and region switchers in the top header.
-1. Select *Access management* in the left-hand menu.
-1. Select the Users tab and click  "Invite user +".
-1. You are prompted to enter up to 100 email addresses, separated by commas, spaces, or line breaks.
+1. First, ensure you have the correct account and region selected in the account and region switchers in the header.
+1. Select [*Access management*](https://quantum.cloud.ibm.com/users) from the main menu.
+1. On the Users tab, click  "Invite user".
+1. Enter the users' email adddresses and optionally assign the invited users to access groups.
+1. The user will receive an invitation to create an IBM Cloud account and join the instance. After they accept the invitation, they will see a new account in their account switcher at the top of the IBM Quantum Platform page.
 
-     You can optionally assign the invited user to an access group. To create an access group, see the [Create and manage access groups](/guides/access-groups) guide.
-1. The user will receive an invitation to create an IBM Cloud account and join the instance.
 
 ## Manage a user's access groups
 
-To change a user's access group or to add a user to a different access group, go to *Access management* in the left-hand menu. Click the three-dots menu at the end of the row for that user and select *Manage access*. On the modal that opens, select the access groups the user should belong to. A user can belong to multiple access groups.
+To change a user's access groups, go to [*Access management*](https://quantum.cloud.ibm.com/users) from the main menu. Click the overflow menu at the end of the user's row and select *Manage access*. On the modal that opens, select the access groups the user should belong to.
 
 ## Remove a user
 
-To remove a user from an instance, go to *Access management* in the left-hand menu. Click the three-dots menu at the end of the row for that user, and select *Delete*. You will be prompted to confirm the deletion.
+To remove a user from an instance, go to [*Access management*](https://quantum.cloud.ibm.com/users) from the main menu. Click the overflow menu at the end of the user's row, and select *Delete*. You are prompted to confirm the deletion.
 
 <Admonition type="Note">
 If a user is removed from an instance, their workloads and the associated results are no longer visible to them. Other users in the same instance can still access the workload data and results.
+</Admonition>
+
+## Next steps
+
+<Admonition type="tip" title="Recommendations">
+   - Create [instances.](/guides/instances#add-instance)
+   - Understand the [IBM Cloud account structure,](/guides/cloud-account-structure) including access policies, groups, and roles.
+   - [Create and manage access groups.](/guides/access-groups)
 </Admonition>
