--- a/docs/guides/considerations-set-up-runtime.mdx
+++ b/docs/guides/considerations-set-up-runtime.mdx
@@ -70,13 +70,18 @@ You should understand the following considerations when setting up your environm
 
 The actions in the custom roles can be used for more fine-grained access control. For example, some users might need full access to work on service instances, while others might only need Read access to service instances, programs, and jobs.
 
-To achieve that, define two different custom roles such as `MLreader` and `MLwriter`. Remove all cancel, delete, and update roles from the `MLreader` custom role, and include all actions in the `MLwriter` custom role. Next, add the roles to two different access groups accordingly.
+To achieve that, define two different custom roles, such as `MLreader` and `MLwriter`. Remove all cancel, delete, and update roles from the `MLreader` custom role, and include all actions in the `MLwriter` custom role. Next, add the roles to two different access groups accordingly.
 
 <Admonition type="note">
 When using dynamic rules, that is, when the identity provider (IDP) administrator manages access through custom IDP user attributes, do not use IDP custom user attributes that are substrings of each other. For instance, don't use `ml` and `mlReader`, as the string comparison of `ml` would also accept `mlReader`. You could use `MLreader` and `MLwriter` to avoid this conflict.
 </Admonition>
 
 For an example of setting up custom roles, see [Create access groups for projects](/guides/custom-roles).
+
+<span id="shared-access"></span>
+### Shared workload access
+
+It is important to note that access applies to service instances.  Thus, users with 'write' access to an instance can cancel their own workloads, but can also view and cancel other users' workloads.  This is a function of how IAM works and cannot be changed.
 
 <span id="other-cloud-rsc-org"></span>
 ### Other Cloud resources
