--- a/docs/guides/estimate-job-run-time.mdx
+++ b/docs/guides/estimate-job-run-time.mdx
@@ -71,7 +71,10 @@ After a workload has completed, there are several ways to view its actual usage:
 <span id="instance-usage"></span>
 ## View instance usage
 
-You can view an instance's usage on the [Instances](https://quantum.cloud.ibm.com/instances) page, or, for those with the proper authority, the [Analytics](https://quantum.cloud.ibm.com/analytics) page.  Note that the pages might show different usage numbers because The Instance page shows usage in a 28-day rolling window prior to the current timestamp, while the Analytics page uses full day boundaries.
+You can view an instance's usage on the [Instances](https://quantum.cloud.ibm.com/instances) page, or, for those with the proper authority, the [Analytics](https://quantum.cloud.ibm.com/analytics) page.  Note that the pages might show different usage numbers because they calculate usage differently.
+
+The Instance page shows real time usage for the last 28-days (rolling), up to the current time on the current day.  The Analytics page usage is re-calculated hourly and includes the last 28 full days; that is, it shows usage from 00:00 28 days ago to today, at the top of the hour.
+
 </CloudContent>
 
 ## Estimate workload usage
